# MyPasteBin

./: CodeGenUtils.py  ComputePow2Original.cpp  CustomSTLAllocatorTest.cpp  README.md  build_clang_linux.sh  build_mongocxx_msys2.sh  build_pkgsrc.sh  cme_mdp3.template.cpp  cme_mdp3.template.h  dot.emacs  iostream.cpp  sbe2yaml.py  shared_mem_example.cpp
qtmongo/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
